fix z-index of link

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -115,6 +115,7 @@
       bottom: 0;
       right: 0;
       left: 0;
+      z-index: 10;
 
       &:focus {
         outline: none;
@@ -968,6 +969,7 @@ input.jobtype-num {
     bottom: 0;
     right: 0;
     left: 0;
+    z-index: 10;
 
     &:focus {
       outline: none;
